--- a/src/private/scroll01.html
+++ b/src/private/scroll01.html
@@ -52,7 +52,7 @@
           <div id="filters">
             <div class="filter">
               <span>unset</span>
-              <div><img class="unset" src="bg.jpg"></div>
+              <div><img class="target unset" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="pos-unset" type="checkbox" class="pos-box">
                 <label for="pos-unset">pos</label>
@@ -62,7 +62,7 @@
             </div>
             <div class="filter">
               <span>blur()</span>
-              <div><img class="blur" src="bg.jpg"></div>
+              <div><img class="target blur" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-blur" type="checkbox" class="anim-box">
                 <label for="anim-blur">anim</label>
@@ -74,7 +74,7 @@
             </div>
             <div class="filter">
               <span>brightness()</span>
-              <div><img class="brightness" src="bg.jpg"></div>
+              <div><img class="target brightness" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-brightness" type="checkbox" class="anim-box">
                 <label for="anim-brightness">anim</label>
@@ -86,7 +86,7 @@
             </div>
             <div class="filter">
               <span>contrast()</span>
-              <div><img class="contrast" src="bg.jpg"></div>
+              <div><img class="target contrast" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-contrast" type="checkbox" class="anim-box">
                 <label for="anim-contrast">anim</label>
@@ -98,7 +98,7 @@
             </div>
             <div class="filter">
               <span>drop-shadow()</span>
-              <div><img class="drop-shadow" src="bg.jpg"></div>
+              <div><img class="target drop-shadow" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-drop-shadow" type="checkbox" class="anim-box">
                 <label for="anim-drop-shadow">anim</label>
@@ -110,7 +110,7 @@
             </div>
             <div class="filter">
               <span>grayscale()</span>
-              <div><img class="grayscale" src="bg.jpg"></div>
+              <div><img class="target grayscale" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-grayscale" type="checkbox" class="anim-box">
                 <label for="anim-grayscale">anim</label>
@@ -122,7 +122,7 @@
             </div>
             <div class="filter">
               <span>hue-rotate()</span>
-              <div><img class="hue-rotate" src="bg.jpg"></div>
+              <div><img class="target hue-rotate" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-hue-rotate" type="checkbox" class="anim-box">
                 <label for="anim-hue-rotate">anim</label>
@@ -133,8 +133,17 @@
               </div>
             </div>
             <div class="filter">
+              <div><canvas class="target hue-rotate" id="hue-rotate-canvas"></div>
+              <div class="pos-bg">
+                <input id="anim-hue-rotate-canvas" data="anim-hue-rotate" type="checkbox" class="anim-box">
+                <label for="anim-hue-rotate-canvas">anim</label>
+                <input id="pos-hue-rotate-canvas" type="checkbox" class="pos-box">
+                <label for="pos-hue-rotate-canvas">pos</label>
+              </div>
+            </div>
+            <div class="filter">
               <span>invert()</span>
-              <div><img class="invert" src="bg.jpg"></div>
+              <div><img class="target invert" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-invert" type="checkbox" class="anim-box">
                 <label for="anim-invert">anim</label>
@@ -146,7 +155,7 @@
             </div>
             <div class="filter">
               <span>opacity()</span>
-              <div><img class="opacity" src="bg.jpg"></div>
+              <div><img class="target opacity" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-opacity" type="checkbox" class="anim-box">
                 <label for="anim-opacity">anim</label>
@@ -158,7 +167,7 @@
             </div>
             <div class="filter">
               <span>saturate()</span>
-              <div><img class="saturate" src="bg.jpg"></div>
+              <div><img class="target saturate" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-saturate" type="checkbox" class="anim-box">
                 <label for="anim-saturate">anim</label>
@@ -170,7 +179,7 @@
             </div>
             <div class="filter">
               <span>sepia()</span>
-              <div><img class="sepia" src="bg.jpg"></div>
+              <div><img class="target sepia" src="bg.jpg"></div>
               <div class="pos-bg">
                 <input id="anim-sepia" type="checkbox" class="anim-box">
                 <label for="anim-sepia">anim</label>
@@ -181,8 +190,22 @@
               </div>
             </div>
             <div class="filter">
+              <div>
+                <video class="target sepia" controls>
+                  <source src="trail.mp4" type="video/mp4">
+                </video>
+              </div>
+              <div class="pos-bg">
+                <input id="anim-sepia-video" data="anim-sepia" type="checkbox" class="anim-box">
+                <label for="anim-sepia-video">anim</label>
+                <input id="pos-sepia-video" type="checkbox" class="pos-box">
+                <label for="pos-sepia-video">pos</label>
+              </div>
+            </div>
+            <div class="filter">
               <span>url()</span>
-              <div><img class="url" src="transparent-95031.png" style="filter: url(#turbulence); /* for Firefox */"></div>
+              <div><img class="target url" src="transparent-95031.png"
+                style="filter: url(#turbulence); /* for Firefox */"></div>
               <div class="pos-bg">
                 <input id="pos-url" type="checkbox" class="pos-box">
                 <label for="pos-url">pos</label>
