--- a/public/private/video08.html
+++ b/public/private/video08.html
@@ -6,17 +6,29 @@ html.hide-scrollbar::-webkit-scrollbar {
 }
 html.hide-scrollbar {
   -ms-overflow-style: none;
-  overflow: -moz-scrollbars-none;
+}
+html.fullscreen {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+body.fullscreen {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: -17px;
+  bottom: 0;
+  overflow-y: scroll;
 }
 body {
   margin: 0;
   padding: 0;
-  height: 200vh;
 }
 main {
   display: grid;
   grid-template-columns: 50vw 50vw;
   grid-template-rows: 50vh 50vh;
+  height: 200vh;
 }
 .center {
   grid-column: 1 / span 2;
@@ -117,19 +129,23 @@ button:hover {
       fullscreen.textContent = 'Fullscreen';
       player.style = '';
       html.className = '';
+      document.body.className = '';
     } else {
       if (html.webkitRequestFullscreen) {
         html.webkitRequestFullscreen();
+        html.className = 'hide-scrollbar';
       }
       if (html.mozRequestFullScreen) {
         html.mozRequestFullScreen();
+        html.className = 'fullscreen';
+        document.body.className = 'fullscreen';
       }
       if (html.msRequestFullscreen) {
         html.msRequestFullscreen();
+        html.className = 'hide-scrollbar';
       }
       fullscreen.textContent = 'Exit Fullscreen';
       player.style = 'position: absolute; left: 0; top: 0;';
-      html.className = 'hide-scrollbar';
     }
   });
 
